--- a/lodspeakr/components/static/css/basic.css
+++ b/lodspeakr/components/static/css/basic.css
@@ -48,3 +48,23 @@ min-width:100px;
 direction: ltr; position: absolute; left: 0px; top: 80px; width: 600px; height: 600px;
 }
 
+.link {
+  fill: none;
+  stroke: #666;
+  stroke-width: 1.5px;
+}
+
+.node circle {
+  fill: #ccc;
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+text {
+  font: 10px sans-serif;
+  pointer-events: none;
+}
+
+svg{
+  border: 1px solid grey;
+}
