--- a/lodspeakr/components/static/css/basic.css
+++ b/lodspeakr/components/static/css/basic.css
@@ -55,14 +55,18 @@ direction: ltr; position: absolute; left: 0px; top: 80px; width: 600px; height: 
 }
 
 .node circle {
-  fill: #ccc;
+  fill: #69699f;
   stroke: #fff;
   stroke-width: 1.5px;
 }
 
 text {
-  font: 10px sans-serif;
+  font: 12px sans-serif;
   pointer-events: none;
+}
+
+.bigfont{
+  font-size:150%;
 }
 
 svg{
