--- a/lodspeakr/components/static/index.html
+++ b/lodspeakr/components/static/index.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="modal hide fade" id="load-dialog">
     <div class="modal-header">
-      <h3>Load Dataset</h3>
+      <h3>Import Dataset</h3>
     </div>
     <div class="modal-body">
       <legend for="dataset-url">URL of the dataset</legend>
