--- a/lodspeakr/components/static/index.html
+++ b/lodspeakr/components/static/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="modal-footer">
         <a href="#" class="btn" data-dismiss="modal" aria-hidden="true">Close</a>
-        <a href="#" class="btn btn-primary" id="load-button-run" aria-hidden="true">Load Dataset</a>
+        <a href="#" class="btn btn-primary" id="load-button-run" aria-hidden="true">Import Dataset</a>
       </div>
     </div>
   </div>
