--- a/lodspeakr/components/static/index.html
+++ b/lodspeakr/components/static/index.html
@@ -1,8 +1,11 @@
 {%include "../includes/header.inc"%}
 
-<button class="btn btn-large btn-info" id="load-button" data-toggle="modal" data-target="#load-dialog">Load Dataset</button>
 
-<div class="container">
+
+<div class="container=fluid">
+  <div class="row-fluid offset5 span4">
+    <button class="btn btn-large btn-info" id="load-button" data-toggle="modal" data-target="#load-dialog">Import Dataset</button>
+  </div>
   <div class="modal hide fade" id="load-dialog">
     <div class="modal-header">
       <h3>Import Dataset</h3>
