--- a/lodspeakr/components/static/css/basic.css
+++ b/lodspeakr/components/static/css/basic.css
@@ -82,7 +82,6 @@ svg{
   min-height: 100px;
   margin: auto;
   margin-top: 50px;
-  width:1170px;
   text-align: center;
 }
 
@@ -94,14 +93,15 @@ svg{
   min-height: 140px;
   margin: auto;
   margin-top: 50px;
-  width:1100px;
   text-align: center;
 }
 
 .datasetTitle{
   text-align: center;
 }
-
+.datasetSubtitle{
+  text-align: center;
+}
 .numberOfSelected{
   text-align: center;
 }
